<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    tools:context=".ChangePass">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMarginStart="40dp"></androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/New_pess_title"
        android:layout_width="309dp"
        android:layout_height="63dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/new_pess"
        android:textColorHighlight="#000F0101"
        android:textColorLink="#00180101"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/colorInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_pass"
        android:layout_width="407dp"
        android:layout_height="59dp"
        android:layout_marginTop="104dp"
        android:autofillHints=""
        android:drawableEnd="@drawable/ic_lock_white_24dp"
        android:drawableRight="@drawable/ic_lock_white_24dp"
        android:gravity="end"
        android:hint="@string/first_new_pess"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@color/colorInput"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/New_pess_title" />

    <EditText
        android:id="@+id/second_pass"
        android:layout_width="407dp"
        android:layout_height="59dp"
        android:layout_marginTop="48dp"
        android:drawableEnd="@drawable/ic_lock_white_24dp"
        android:drawableRight="@drawable/ic_lock_white_24dp"
        android:gravity="end"
        android:hint="@string/second_new_pess"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:textColor="@color/colorInput"

        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_pass" />

    <Button
        android:id="@+id/button"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/login_button_back"
        android:text="@string/OK_button"
        android:textColor="@color/colorInput"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>