<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_gradient"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".WorkerScreen">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMarginStart="40dp"></androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/Worker_Screen_title"
        android:layout_width="353dp"
        android:layout_height="54dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/colorInput"
        android:textColorHighlight="#000F0101"
        android:textColorLink="#00180101"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_shift_to_swap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:padding="16dp"
        android:text="@string/shift_swap"
        android:textColor="@android:color/white"
        android:textColorLink="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_shifts_reg"
        android:layout_width="398dp"
        android:layout_height="46dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_shift_to_swap" />

    <TextView
        android:id="@+id/choose_shift_to_swap1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:padding="16dp"
        android:text="@string/shift_swap1"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_shifts_wanted"
        android:layout_width="398dp"
        android:layout_height="46dp"
        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_shift_to_swap" />

    <Button
        android:id="@+id/button_ok_worker_screen"
        android:layout_width="146dp"
        android:layout_height="51dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="108dp"
        android:background="@drawable/login_button_back"
        android:text="@string/OK_button"
        android:textColor="@color/colorInput"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image_call"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="284dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descript"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_phone" />


</androidx.constraintlayout.widget.ConstraintLayout>